Adicionado salvamento de cirurgioes da tabela