@@ -4,7 +4,7 @@ import boletimdasaude.domain.cirurgiao.ProcedimentoCirurgiao;
 import boletimdasaude.infra.persitence.cirurgiao.entities.ProcedimentoCirurgiaoEntity;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 public class ProcedimentoCirurgiaoMapper {
 
@@ -18,8 +18,7 @@ public class ProcedimentoCirurgiaoMapper {
     public static List<ProcedimentoCirurgiaoEntity> toEntityList(List<ProcedimentoCirurgiao> domainList) {
         return domainList.stream()
                 .map(ProcedimentoCirurgiaoMapper::toEntity)
-                .collect(Collectors.toList()
-        );
+                .toList();
     }
 
     public static ProcedimentoCirurgiao toDomain(ProcedimentoCirurgiaoEntity entity) {
@@ -33,8 +32,15 @@ public class ProcedimentoCirurgiaoMapper {
     public static List<ProcedimentoCirurgiao> toDomainList(List<ProcedimentoCirurgiaoEntity> entityList) {
         return entityList.stream()
                 .map(ProcedimentoCirurgiaoMapper::toDomain)
-                .collect(Collectors.toList()
-        );
+                .toList();
+    }
+
+    public static Optional<ProcedimentoCirurgiao> toDomainOptional(ProcedimentoCirurgiaoEntity entityOptional) {
+        return Optional.of(new ProcedimentoCirurgiao(
+                entityOptional.getId(),
+                entityOptional.getNome(),
+                ResultadoMensalCirurgiaoMapper.toDomainList(entityOptional.getResultadosMensais())
+        ));
     }
 
 }
